Fixed footer issue on mobile devices

--- a/styleSheet.css
+++ b/styleSheet.css
@@ -1,4 +1,9 @@
-body {
+@viewport {
+    width: device-width ;
+    zoom: 1.0 ;
+  }
+  
+  body {
     background-color: black;
     font-size: large;
 }
@@ -73,6 +78,5 @@ a:hover {
     grid-area: footer footer footer footer;
     padding: 2%;
     font-size: small;
-    position:absolute;
     bottom:0;
 }
